--- a/index.html
+++ b/index.html
@@ -72,26 +72,34 @@
 
             <li class="collection__list--item">
                 <img class="collection__list--item-img" src="./images/coffee-Gran.Espresso.png" alt="coffee Gran Espresso" width="255" height="193">
-                <h3 class="collection__list--item-heading">Gran Espresso</h3>
-                <p class="collection__list--item-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+                <div class="collection__list--item-box">
+                    <h3 class="collection__list--item-heading">Gran Espresso</h3>
+                    <p class="collection__list--item-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+                </div>
             </li>
 
             <li class="collection__list--item">
                 <img class="collection__list--item-img" src="./images/coffee-Planalto.png" alt="coffee Planalto" width="256" height="193">
-                <h3 class="collection__list--item-heading">Planalto</h3>
-                <p class="collection__list--item-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+                <div class="collection__list--item-box">
+                    <h3 class="collection__list--item-heading">Planalto</h3>
+                    <p class="collection__list--item-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+                </div>
             </li>
 
             <li class="collection__list--item">
                 <img class="collection__list--item-img" src="./images/coffee-Piccollo.png" alt="coffee Piccollo" width="255" height="193">
-                <h3 class="collection__list--item-heading">Piccollo</h3>
-                <p class="collection__list--item-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+                <div class="collection__list--item-box">
+                    <h3 class="collection__list--item-heading">Piccollo</h3>
+                    <p class="collection__list--item-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+                </div>
             </li>
 
             <li class="collection__list--item" id="collection__list--item-4">
                 <img class="collection__list--item-img" src="./images/coffee-Danche.png" alt="coffee Danche" width="235" height="178">
-                <h3 class="collection__list--item-heading">Danche</h3>
-                <p class="collection__list--item-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+                <div class="collection__list--item-box">
+                    <h3 class="collection__list--item-heading">Danche</h3>
+                    <p class="collection__list--item-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+                </div>
             </li>
 
         </ul>
@@ -113,20 +121,26 @@
 
             <li class="reasons__list--item">
                 <img class="reasons__list--item-img" src="./icons/coffe.bean-icon.svg" alt="coffee bean" width="71" height="72">
-                <h3 class="reasons__list--item-heading">Best quality</h3>
-                <p class="reasons__list--item-text">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+                <div class="reasons__list--item-info">
+                    <h3 class="reasons__list--item-heading">Best quality</h3>
+                    <p class="reasons__list--item-text">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+                </div>
             </li>
 
             <li class="reasons__list--item">
                 <img class="reasons__list--item-img" src="./icons/gift-icon.svg" alt="gift box" width="72" height="72">
-                <h3 class="reasons__list--item-heading">Exclusive benefits</h3>
-                <p class="reasons__list--item-text">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+                <div class="reasons__list--item-info">
+                    <h3 class="reasons__list--item-heading">Exclusive benefits</h3>
+                    <p class="reasons__list--item-text">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+                </div>
             </li>
 
             <li class="reasons__list--item" id="reasons__list--item-3">
-                <img class="reasons__list--item-img" src="./icons/track-icon.svg" alt="track" width="72" height="50">
-                <h3 class="reasons__list--item-heading">Free shipping</h3>
-                <p class="reasons__list--item-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+                <img class="reasons__list--item-img-1" src="./icons/track-icon.svg" alt="track" width="72" height="50">
+                <div class="reasons__list--item-info">
+                    <h3 class="reasons__list--item-heading">Free shipping</h3>
+                    <p class="reasons__list--item-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+                </div>
             </li>
 
         </ul>
@@ -186,11 +200,11 @@
             <div class="container">
                 <div class="footer__box">
                     <a class="footer__box--link" href="index.html"><img class="footer__box--link-img" src="./icons/logobek.footer-icon.svg" alt="Logo of coffeeroasters" width="236" height="26"></a>
-
+                <div class="footer-mobile-box">
                     <a class="footer__box-link" href="index.html">HOME</a>
                     <a class="footer__box-link" href="index.html">ABOUT US</a>
                     <a class="footer__box-link" id="footer__box-link-1" href="index.html">Create your plan</a>
-
+                </div>
                     <a class="footer__box--link--socialmedia" href="#"><img class="footer__box--link--socialmedia-img" src="./icons/facebook-icon.svg" alt="facebook icon" width="24" height="24"></a>
                     <a class="footer__box--link--socialmedia" href="#"><img class="footer__box--link--socialmedia-img" src="./icons/twitter-icon.svg" alt="twitter icon" width="24" height="20"></a>
                     <a class="footer__box--link--socialmedia" href="#"><img class="footer__box--link--socialmedia-img" src="./icons/instagram-icon.svg" alt="instagramm icon" width="24" height="24"></a>
